# ecfs

./: .gitignore  Dockerfile  NodeManagementDashboard.md  README.md  ecfs-lite.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ecfs/: __init__.py  cli.py
ecfs/core/: __init__.py  dedup.py  dns.py  engine.py  fragmentation.py  hop.py  orchestrator.py  queue.py  routing.py  state_machine.py  threat_assessor.py
ecfs/crypto/: __init__.py  cipher.py  keys.py  packet.py
ecfs/discovery/: __init__.py  hardware.py  mesh.py  peer.py  transport_factory.py
ecfs/lite/: __init__.py  auth.py  hub.py
ecfs/plugins/: __init__.py  base.py  ble_transport.py  dns_transport.py  internet_transport.py  lora_transport.py  null_transport.py  registry.py  relay_server.py  rfid_transport.py  stego_transport.py  ultrasonic_transport.py
ecfs/relay/: __init__.py  client.py  protocol.py  server.py
tests/: test_dns.py  test_engine.py  test_integration_full_flow.py  test_integration_mesh.py  test_relay.py  test_relay_client.py  test_relay_integration.py  test_relay_protocol.py  test_relay_server.py
tests/discovery/: test_hardware.py  test_integration.py  test_mesh.py  test_peer.py  test_transport_factory.py
tests/test_core/: test_dedup.py  test_hop.py  test_queue.py  test_routing.py  test_state_machine.py  test_threat_assessor.py
tests/test_crypto/: __init__.py  test_cipher.py  test_keys.py  test_packet.py
tests/test_plugins/: test_base.py  test_ble_transport.py  test_dns_transport.py  test_internet_transport.py  test_lora_transport.py  test_null_transport.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_registry.py  test_relay_server.py  test_rfid_transport.py  test_stego_transport.py  (+1 more)
