[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecfs"
version = "0.1.0"
description = "Autonomous Emergency Communication Failover System — DTN routing engine with modular transport plugins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "David Cain", email = "dcain2336@users.noreply.github.com" },
]
keywords = ["dtn", "mesh", "lora", "failover", "emergency", "communication"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]
internet = [
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn>=0.29",
]
radio = [
  "pyserial>=3.5",
  "bleak>=0.22",
]
audio = [
  "scipy>=1.13",
  "pyaudio>=0.2.14",
]
all = [
  "ecfs[internet,radio,audio]",
]

[project.scripts]
ecfs = "ecfs.cli:main"

[project.urls]
Homepage = "https://github.com/dcain2336/ecfs"
Repository = "https://github.com/dcain2336/ecfs"
Issues = "https://github.com/dcain2336/ecfs/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=ecfs --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
